--- a/style.css
+++ b/style.css
@@ -1,19 +1,22 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-body{
+
+body {
     padding: 20px;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to right,blue,purple);
+    background: linear-gradient(to right, blue, purple);
 }
-.title{
+
+.title {
     font-size: 48px;
 }
-.create{
+
+.create {
     width: 200px;
     height: 50px;
     background-color: red;
@@ -24,27 +27,86 @@ body{
     align-items: center;
     cursor: pointer;
 }
-.container{
-    /* background-color: yellow; */
-    height: 70%;
+
+.container {
     margin: 20px;
     padding: 20px;
-    width: auto;
-    display: flex;
-    flex-wrap: wrap;
-    overflow-y: scroll;
-    justify-content: space-around;
-    gap: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto, minmax(250px, 1fr));
+    gap: 5px;
 }
+
+.text {
+    position: relative;
+    margin: 0;
+    padding: 10px;
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+    box-sizing: border-box;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
+.text img {
+    width: 30px;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    cursor: pointer;
+}
+
 ::-webkit-scrollbar {
-    width: 5px; 
+    width: 1.5px;
 }
+
 ::-webkit-scrollbar-thumb {
     background-color: black;
 }
-.text{
-    /* max-width: 200px; */
-    width: 40%;
-    height: 150px;
-    background-color: #fff;
+
+.pop-up {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
 }
+
+.pop-up-content {
+    width: 80%;
+    height: 80%;
+    background: white;
+    padding: 20px;
+    padding-top: 60px;
+    overflow: auto;
+    position: relative;
+}
+
+.pop-up-content .back{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: red;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    z-index: 1001;
+}
+
+.pop-up-content .text img {
+    width: 30px;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+}
+
